# Algorithm_Lab

./: .gitignore  CMakeLists.txt  GreedyRunner.cpp  GreedyRunner.h  SmartRunner.cpp  SmartRunner.h  boss_strategy.cpp  boss_strategy.h  ch.cpp  ch.h  character.cpp  character.h  chest.cpp  chest.h  cube.cpp  cube.h  dp.cpp  dp.h  game3d.cpp  glad.c  input.json  lastMaze.json  last_maze.json  main.cpp  maze.cpp  maze.h  maze_navigator.cpp  maze_navigator.h  object.cpp  object.h  play.cpp  player.cpp  player.h  puzzle_solver.cpp  puzzle_solver.h  sha256.h  sha256_test.c  shader.cpp  shader.h  slime.cpp  (+5 more)
Test_Data/: boss_test.rar
Test_Data/first/: maze2.json  小组验收记录表.xlsx
document/: test.md  算法设计与分析课设汇报.pptx
include/glad/: glad.h
maze_navigator (1)/: maze_navigator.cpp  maze_navigator.h
mydata/: 1.json  2.json
shader/: cube_shader.fs  health_bar.fs  slime_shader.fs  slime_shader.vs
texture/Rock055_1K-PNG/: Rock055_1K-PNG.mtlx  Rock055_1K-PNG.usdc
